--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -297,6 +297,18 @@
     .mySlides{width:700px; height:700px;}
     .picture-size{max-width:100%; height:100%;}
 
+    /*** 게시물 더보기 ***/
+    .plusimg{
+        max-width:100%;
+        height:100%;
+    }
+
+    .plusimg > img{
+        width:300px;
+        height:300px;
+        object-fit: cover;
+    }
+
 
 
 
