--- a/Spring/Photostagram/src/main/resources/static/css/style.css
+++ b/Spring/Photostagram/src/main/resources/static/css/style.css
@@ -317,6 +317,7 @@ body {
 .side_box .profile_thumb img {
   width: 100%;
   height: 100%;
+  margin-top: -3px;
 }
 
 .side_box .user_profile {
@@ -418,11 +419,10 @@ body {
 }
 
 .hidden_menu {
-  width: 666px;
-  /* background: red; */
+  width: 600px;
   position: relative;
   left: 43%;
-  transform: translateX(-50%);
+  transform: translateX(-55%);
   top: 60px;
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.09);
@@ -430,7 +430,7 @@ body {
 }
 
 .hidden_menu .scroll_inner {
-  height: 100px;
+  height: 112px;
   width: auto;
   overflow-x: auto;
   overflow-y: hidden;
