--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -103,7 +103,32 @@
 
             </div>
         </div>
+        <!--사람 태그 모달-->
 
+        <div class="tagModal">
+            <div></div>
+            <div class="tagSearch">
+                <div>
+                    <h4>태그 : </h4>
+                </div>
+                <div>
+                    <input placeholder="검색">
+                </div>
+            </div>
+            <div>
+                <div>
+                    <button>
+                        <div>
+                            <img>
+                            <div>
+                                <div>아이디</div>
+                                <span>이름</span>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </div>
 
 
         <!-- 포스트 메뉴 모달 -->
