--- a/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" th:href="@{/css/reset.css}" />
   <link rel="stylesheet" th:href="@{/css/style.css}" />
   <link rel="stylesheet" th:href="@{/css/aside.css}" />
+  <link rel="stylesheet" th:href="@{/css/index.css}" />
   <link
           rel="stylesheet"
           href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
