--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -273,11 +273,42 @@
                                   <div class="commentInfo">
                                     <span>1일</span>&nbsp;&nbsp;좋아요
                                     <span id="md_comment_likeCount" th:text="${comment.modal_likeCount}">100개</span>개&nbsp;
-                                    <span>답글달기</span>
+                                    <span class="resp_comment">답글달기</span>
                                   </div>
                                 </div>
                               </div>
+
                               <!-------------------------------------------------->
+                            </div>
+
+                            <!--!!!!!!!!! 답글이 있을경우 !!!!!!!!-->
+                            <div class="resp_comment_section" th:if="${comment.parent > 0}">
+                              <th:block th:if="${#strings.isEmpty(comment.memberVO.profileImg)}">
+                                <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/>
+                              </th:block>
+
+                              <th:block th:unless="${#strings.isEmpty(comment.memberVO.profileImg)}">
+                                <img th:src="|@{/}thumb/${comment.memberVO.profileImg}" alt="프로필이미지"/>
+                              </th:block>
+                              <div th:data-no="${comment.no}" style="display: inline-block;">
+                                <a class="modal_comment_id" th:href="@{/profile(username=${user.username})}" th:text="${comment.memberVO.username}">KingTiger</a>
+                                <input type="hidden" th:value="${comment.no}">
+                                <span class="modal_comment" th:text="${comment.comment}">안녕하세요 나는 타이거입니다.</span>
+                                <!-- 댓글 좋아요 -->
+                                <th:block th:if="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
+                                  <div class="comLike sprite_full_small_heart_icon_outline" th:data-no="${user.no}"></div>
+                                </th:block>
+                                <!-- 댓글 좋아요를 안 누른 경우 -->
+                                <th:block th:unless="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
+                                  <div class="comLike sprite_small_heart_icon_outline" th:data-no="${user.no}"></div>
+                                </th:block>
+
+                                <div class="commentInfo">
+                                  <span>1일</span>&nbsp;&nbsp;좋아요
+                                  <span id="md_comment_likeCount" th:text="${comment.modal_likeCount}">100개</span>개&nbsp;
+                                  <span class="resp_comment">답글달기</span>
+                                </div>
+                              </div>
                             </div>
                           </th:block> <!-- comment : ${comments}-->
                         </div>
@@ -325,7 +356,7 @@
                           <input type="hidden" name="uid" th:value="${#authentication.principal.user.username}">
                           <input type="hidden" name="postNo" th:value="${article.no}">
                           <input type="hidden" name="userNo" th:value="${user.no}">
-                          <input type="text" class="commentText" placeholder="댓글 달기...">
+                          <input type="text" class="modal_commentText" placeholder="댓글 달기...">
                           <button class="upload_btn m_text">게시</button>
                         </div>
                       </div>
