--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -110,8 +110,8 @@
       width: 25px;
       height: 25px;
     }
-    #post > .contents > div > div:nth-child(1) > .unlike {float: left; background-position: -52px -258px;}
-    #post > .contents > div > div:nth-child(1) > .like {float: left; background-position: -26px -258px;}
+    #post > .contents > div > div:nth-child(1) > .unlike {float: left; background-position: -52px -260px;}
+    #post > .contents > div > div:nth-child(1) > .like {float: left; background-position: -26px -260px;}
     #post > .contents > div > div:nth-child(1) > a:nth-child(2) {float: left; background-position: -238px -201px;}
     #post > .contents > div > div:nth-child(1) > a:nth-child(3) {float: left; background-position: -155px -229px;}
     #post > .contents > div > div:nth-child(1) > .remove {float: right; background-position: -231px -284px;}
@@ -125,7 +125,7 @@
       position: absolute;
       top: 90px;
       width: 100%;
-      height: 40px;
+      height: 87%;
       border-top: 1px solid #e9e9e9;
     }
     #post > .contents > div > div:nth-child(3) > a:nth-child(1) {float: left;}
@@ -133,17 +133,19 @@
 
     #post > .contents > div > div:nth-child(3) > textarea {
       width: 410px;
-      height: 35px;
+      height: 100%;
       resize: none;
       margin-left: 8px;
       border-left: 1px solid #e9e9e9;
       border-right: 1px solid #e9e9e9;
       border-top: none;
       border-bottom: none;
+      padding-left: 4px;
+      padding-top: 2px;
     }
     #post > .contents > div > div:nth-child(3) > a:nth-child(3) {
       float: right;
-      margin-top: 8px;
+      margin-top: 18px;
       margin-right: 10px;
       font-size: 14px;
       font-weight: bold;
@@ -191,13 +193,20 @@
       font-weight: bold;
       margin-right: 10px;
     }
-    .reply > h1 {float: left; margin-right: 4px;}
+    .reply > h1 {float: left; margin-right: 4px; }
     .reply > a {color: #0095f6; width: 350px; }
     .reply > div {
       margin-left: 1px;
       color: #a9a9a9;
       font-weight: bold;
-
+    }
+    .reply > .comment_width {
+      width: 100%;
+    }
+    .reply  .comment_more {
+      margin-left: 1px;
+      color: #a9a9a9;
+      font-weight: bold
     }
     .reply > div > a {color: #a9a9a9; font-weight: bold;}
 
@@ -223,9 +232,9 @@
     #reHeart {
       position: relative;
       float: right;
-      top: 12px;
-      background-image: url('../img/background01.png');
-      margin-right: 5px;
+      top: 9px;
+      background-image: url(../img/background01.png);
+      margin-right: 13px;
       width: 12px;
       height: 11px;
       font-size: 0;
@@ -294,7 +303,7 @@
 
     /*** 사진 비율 ***/
     .mySlides{width:700px; height:700px;}
-    .picture-size{max-width:100%; height:100%;}
+    .picture-size{max-width:100%; height:100%; object-fit: cover;}
 
     /*** 게시물 더보기 ***/
     .plusimg{
@@ -307,6 +316,10 @@
         height:300px;
         object-fit: cover;
     }
+
+    #post > .picture .bx-pager {top: 93%;}
+
+
 
 
 
