--- a/Spring/Photostagram/src/main/resources/static/css/myPage.css
+++ b/Spring/Photostagram/src/main/resources/static/css/myPage.css
@@ -19,7 +19,7 @@
         margin-top: 50px;
     }
 
-    /*** passChange ***/
+    /*** interaction ***/
 
     #myPage > #myActivity {
         float: left;
@@ -61,17 +61,6 @@
     #myActivity > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
     #myActivity > a {margin-left:500px; font-weight: bold; color: #32a4ff; padding: 10px; font-size: 14px;}
 
-    #passChange {
-        margin-left: 300px;
-        margin-top: 50px;
-        width: 100px;
-        height: 30px;
-        border: none;
-        background: #32a4ff;
-        color: #fff;
-        font-weight: bold;
-    }
-
     #mySelect {
         width: 200px;
         height: 850px;
@@ -94,5 +83,48 @@
     #mySelect > div > .currentSet {font-weight: bold;}
 
     #myActivity > div:nth-child(1) {height: 50px; border-bottom: 1px solid #e9e9e9;}
+
+    #myActivity > div > a {
+      font-weight: bold;
+      margin-left: 250px;
+      font-size: 14px;
+      line-height: 50px;
+    }
+
+
+
+    /*** history ***/
+
+    #myHistory > div {
+       position: relative;
+    }
+
+    #myPage > #myHistory {
+        float: left;
+        width: 800px;
+        height: 850px;
+        border: 1px solid #e9e9e9;
+        background: white;
+        margin-bottom: 100px;
+        overflow: scroll;
+    }
+
+    .historyTop {text-align: center; font-size: 14px; margin-top: 20px;}
+    .historyTop > span {font-weight: bold; font-size: 14px;}
+
+    .historyContents {margin: 20px;}
+    .historyContents > div:nth-child(1) {height: 40px;}
+    .historyContents > div:nth-child(2) {}
+    .historyContents > div > h1 {font-size: 18px; font-weight: bold; width: 75px; float: left; line-height: 40px;}
+    .historyContents > div > a {float: left; border:1px solid #e9e9e9; width: 130px; font-size: 15px; line-height: 30px; text-align: center; font-weight : bold;}
+    .historyBox {margin-top: 15px; border-top: 1px solid #e9e9e9;}
+    .historyBox > h3 {font-size: 14px; font-weight: bold; margin-bottom: 20px; margin-top: 20px;}
+    .historyBox > ul > li {margin: 10px; height: 50px;}
+    .historyBox > ul > li > img {line-height: 50px;}
+    .historyBox > ul > li > img:nth-child(1) {float: left; width: 25px;}
+    .historyBox > ul > li > img:nth-of-type(2) {float: right; width: 10px;}
+    .historyBox > ul > li > div {float: left; margin-left: 20px; line-height: 50px;}
+    .historyBox > ul > li > div > div:nth-child(1) {font-size: 16px;}
+    .historyBox > ul > li > div > div:nth-child(2) {font-size: 14px; color: #888;}
 
 
