2023/04/03 my/interaction/like, my/photos/posts 화면구현 완료

--- a/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
@@ -10,11 +10,197 @@
 <th:block layout:fragment="main">
     <div id="myActivity">
         <div>
-            <a th:href="@{/my/interaction/like}">좋아요</a>
-            <a th:href="@{/my/interaction/comment}">댓글</a>
+            <a th:href="@{/my/interaction/posts}">게시물</a>
+            <a href="#">릴스</a>
         </div>
         <div>
-            좋아요를 누른 콘텐츠가 없습니다.
+            <div class="activityTop">
+                <h1 class="mySortTitle">최신순</h1>
+                <a class="mySort">정렬 및 필터</a>
+                <a class="mySortSelect">선택</a>
+            </div>
+            <div class="activityContents">
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+                <a>
+                    <img th:src="@{/img/125x125.png}">
+                </a>
+            </div>
         </div>
     </div>
 </th:block>
