--- a/Spring/Photostagram/src/main/resources/static/css/myPage.css
+++ b/Spring/Photostagram/src/main/resources/static/css/myPage.css
@@ -19,12 +19,23 @@
         margin-top: 50px;
     }
 
+    .mySortTitle {font-size: 18px; font-weight: bold; width: 75px; float: left; line-height: 40px;}
+    .mySort {float: left; border:1px solid #e9e9e9; width: 130px; font-size: 15px; line-height: 30px; text-align: center; font-weight : bold;}
+    .mySortSelect {
+        color: #32a4ff;
+        float: right;
+        margin-right: 50px;
+        margin-top: 10px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
     /*** interaction ***/
 
     #myPage > #myActivity {
         float: left;
         width: 800px;
-        height: 850px;
+        height: 600px;
         border: 1px solid #e9e9e9;
         background: white;
         margin-bottom: 100px;
@@ -36,11 +47,9 @@
     #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
     #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
     ***/
-    #myActivity > div > div:nth-child(1) {float: left; width: 45px; height:45px; border-radius: 70%; overflow:hidden;}
     #myActivity > div > div > img {width: 100%; height: 100%; object-fit: cover;}
-    #myActivity > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
+    #myActivity > div > div {display: inline-block;}
     #myActivity > div > div > span {float: left; font-size: 18px;}
-    #myActivity > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
     #myActivity > form {
        margin-left: 100px;
        border-collapse: collapse;
@@ -63,26 +72,43 @@
 
     #mySelect {
         width: 200px;
-        height: 850px;
+        height: 600px;
         float: left;
         border: 1px solid #e9e9e9;
         background: white;
     }
 
-    #mySelect > div {height: 50px;}
     #mySelect > div:nth-child(1) {
       line-height: 50px;
       font-size: 16px;
       margin-left: 10px;
       font-weight: bold;
     }
+
     #mySelect > div:nth-child(2) {border-top: 1px solid #e9e9e9;}
-    #mySelect > div > a {display:flex; width:100%; font-size: 14px; line-height: 50px; text-align: center; margin-left: 10px;}
+    #mySelect > div:nth-child(2), div:nth-child(3), div:nth-child(4) {height: 100px; margin-bottom: 10px;}
+
+    #mySelect > div > a {
+        /* width: 100%; */
+        font-size: 15px;
+        line-height: 50px;
+        /* text-align: center; */
+        /* margin-left: 10px; */
+        height: 100%;
+        display: block;
+        text-align: left;
+    }
+
     #mySelect > div:hover:not(.currentMenu, div:nth-child(1)) {cursor: pointer; background: #fafafa; border-left: 2px solid #a4a4a4;}
     #mySelect > .currentMenu {border-left: 2px solid black;}
     #mySelect > div > .currentSet {font-weight: bold;}
 
     #myActivity > div:nth-child(1) {height: 50px; border-bottom: 1px solid #e9e9e9;}
+    #myActivity > div:nth-child(2) {
+        overflow-y: scroll;
+        height: 550px;
+        overflow-x: hidden;
+    }
 
     #myActivity > div > a {
       font-weight: bold;
@@ -102,7 +128,7 @@
     #myPage > #myHistory {
         float: left;
         width: 800px;
-        height: 850px;
+        height: 600px;
         border: 1px solid #e9e9e9;
         background: white;
         margin-bottom: 100px;
@@ -115,8 +141,6 @@
     .historyContents {margin: 20px;}
     .historyContents > div:nth-child(1) {height: 40px;}
     .historyContents > div:nth-child(2) {}
-    .historyContents > div > h1 {font-size: 18px; font-weight: bold; width: 75px; float: left; line-height: 40px;}
-    .historyContents > div > a {float: left; border:1px solid #e9e9e9; width: 130px; font-size: 15px; line-height: 30px; text-align: center; font-weight : bold;}
     .historyBox {margin-top: 15px; border-top: 1px solid #e9e9e9;}
     .historyBox > h3 {font-size: 14px; font-weight: bold; margin-bottom: 20px; margin-top: 20px;}
     .historyBox > ul > li {margin: 10px; height: 50px;}
@@ -127,4 +151,9 @@
     .historyBox > ul > li > div > div:nth-child(1) {font-size: 16px;}
     .historyBox > ul > li > div > div:nth-child(2) {font-size: 14px; color: #888;}
 
+    #mySelect > div > a > i {margin-top: 25px; margin-left: 10px; float:left; margin-right: 20px;}
+    #mySelect > div > a > p {margin-left: 50px; text-align: left; color: #888;}
 
+    .activityTop {width: 100%; height: 40px; margin-left: 20px; margin-top:5px; float: left; position: relative;}
+    .activityContents {margin-top: 20px; margin-left: 20px;}
+    .activityContents > a {margin: 10px; float: left;}
