--- a/Spring/Photostagram/src/main/resources/templates/my/history.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/history.html
@@ -15,8 +15,8 @@
             </div>
             <div class="historyContents">
                 <div>
-                    <h1>최신순</h1>
-                    <a>정렬 및 필터</a>
+                    <h1 class="mySortTitle">최신순</h1>
+                    <a class="mySort">정렬 및 필터</a>
                 </div>
                 <div>
                     <div class="historyBox">
