--- a/Spring/Photostagram/src/main/resources/templates/my/interaction/comment.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/interaction/comment.html
@@ -14,7 +14,10 @@
                   <a th:href="@{/my/interaction/comment}">댓글</a>
               </div>
               <div>
-                  좋아요를 누른 콘텐츠가 없습니다.
+                  <div class="activityTop">
+                      <h1 class="mySortTitle">최신순</h1>
+                      <a class="mySort">정렬 및 필터</a>
+                  </div>
               </div>
           </div>
     </th:block>
