--- a/Spring/Photostagram/src/main/resources/templates/my/interaction/like.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/interaction/like.html
@@ -14,7 +14,193 @@
                 <a th:href="@{/my/interaction/comment}">댓글</a>
             </div>
             <div>
-                좋아요를 누른 콘텐츠가 없습니다.
+                <div class="activityTop">
+                    <h1 class="mySortTitle">최신순</h1>
+                    <a class="mySort">정렬 및 필터</a>
+                    <a class="mySortSelect">선택</a>
+                </div>
+                <div class="activityContents">
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                    <a>
+                        <img th:src="@{/img/125x125.png}">
+                    </a>
+                </div>
             </div>
         </div>
     </th:block>
