--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -112,7 +112,7 @@
                     <h4>태그 : </h4>
                 </div>
                 <div>
-                    <input placeholder="검색">
+                    <input placeholder="검색" name="tagUser">
                 </div>
             </div>
             <div>
