--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="modal_image_content">
-                    <div id="input_image" class="modal_image_upload_content">
+                    <div id="input_image" class="modal_image_upload_content" style="cursor:crosshair">
                         <button class="beforeBtn" id="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
                         <button class="afterBtn" id="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
                         <video autoplay muted loop src="path/to/video.mp4" type="video/mp4"></video>
