--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -982,10 +982,6 @@ html {height: 100%;}
     display:none;
 }
 
-.tagModal.on{
-    display:block;
-}
-
 .tagModal > div:nth-child(1){
     width: 20px;
     height: 15px;
@@ -997,9 +993,17 @@ html {height: 100%;}
     clip-path: path( 'M8 0C8 4 9.32406e-08 7.819 1.25211e-07 10.5C1.57188e-07 13.1815 8 17.0005 8 21L8 0Z' );
 }
 
+.tagUserList{
+    overflow-y:scroll;
+    width:338px;
+    height:180px;
+}
+
 .tagSearch {
-    margin-left: 10px;
-    margin-top:5px;
+    padding:10px 8px;
+    border-bottom:1px solid black;
+    width:338px;
+    height:46px;
 }
 
 .tagSearch > div{
@@ -1008,6 +1012,18 @@ html {height: 100%;}
 
 .tagSearch > div > input{
     border: none;
+}
+
+.tagSearches{
+    padding: 5px;
+    display:flex;
+    width:321px;
+    height:62px;
+}
+
+.tagSearchUser > img{
+    width:46px;
+    height:46px;
 }
 
 
