--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="modal_image_content">
-                    <div id="input_image_drop" class="modal_image_upload_content">
+                    <div id="input_image_drop" class="modal_image_upload_content" style="cursor:crosshair">
                         <button class="beforeBtnDrop" id="beforeBtnDrop"><img th:src="@{/img/arrowL.png}" alt=""></button>
                         <button class="afterBtnDrop" id="afterBtnDrop"><img th:src="@{/img/arrowR_8x13.png}" alt=""></button>
                         <video autoplay muted loop>
@@ -108,24 +108,49 @@
         <div class="tagModal">
             <div></div>
             <div class="tagSearch">
-                <div>
+                <div class="tag">
                     <h4>태그 : </h4>
                 </div>
-                <div>
+                <div class="searchInput">
                     <input placeholder="검색" name="tagUser">
                 </div>
             </div>
-            <div>
-                <div>
-                    <button>
+            <div class="tagUserList">
+                <div class="tagSearches">
+                    <div class="tagSearchUser">
+                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
                         <div>
-                            <img>
-                            <div>
-                                <div>아이디</div>
-                                <span>이름</span>
-                            </div>
+                            <div>아이디</div>
+                            <span>이름</span>
                         </div>
-                    </button>
+                    </div>
+                </div>
+                <div class="tagSearches">
+                    <div class="tagSearchUser">
+                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
+                        <div>
+                            <div>아이디</div>
+                            <span>이름</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="tagSearches">
+                    <div class="tagSearchUser">
+                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
+                        <div>
+                            <div>아이디</div>
+                            <span>이름</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="tagSearches">
+                    <div class="tagSearchUser">
+                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
+                        <div>
+                            <div>아이디</div>
+                            <span>이름</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
