--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -253,7 +253,7 @@
                               <th:block th:unless="${#strings.isEmpty(comment.memberVO.profileImg)}">
                                 <img th:src="|@{/}thumb/${comment.memberVO.profileImg}" alt="프로필이미지"/>
                               </th:block>
-                              <!-------------------------------------------------->
+                              <!--------------------프로필 사진 ------------------->
 
                               <!---------- modal 댓글작성자 ID, 내용 입니다 ---------->
                               <div class="posting">
@@ -277,42 +277,47 @@
                                   </div>
                                 </div>
                               </div>
-
                               <!-------------------------------------------------->
-                            </div>
 
-                            <!-- 답글 있는경우 -->
-                            <div class="resp_comment_section" th:if="${#strings.equals(comment.no,comment.parent)}">
-                              <!-- 프로필 사진 -->
-                              <th:block th:if="${#strings.isEmpty(comment.memberVO.profileImg)}">
-                                <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/>
-                              </th:block>
-                              <th:block th:unless="${#strings.isEmpty(comment.memberVO.profileImg)}">
-                                <img th:src="|@{/}thumb/${comment.memberVO.profileImg}" alt="프로필이미지"/>
-                              </th:block>
-                              <!-- 프로필 사진 -->
+                              <!-- 답글 -->
+                              <div class="resp_comment_section" th:if="${#strings.isEmpty(comment.parent)}" >
+                                  <ul>
+                                    <li>
+                                      <!-- 프로필 사진 -->
+                                      <th:block th:if="${#strings.isEmpty(comment.memberVO.profileImg)}">
+                                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/>
+                                      </th:block>
+                                      <th:block th:unless="${#strings.isEmpty(comment.memberVO.profileImg)}">
+                                        <img th:src="|@{/}thumb/${comment.memberVO.profileImg}" alt="프로필이미지"/>
+                                      </th:block>
+                                      <!-- 프로필 사진 -->
 
-                              <div th:data-no="${comment.no}" style="display: inline-block;">
-                                <a class="modal_comment_id" th:href="@{/profile(username=${user.username})}" th:text="${comment.memberVO.username}">KingTiger</a>
-                                <a href="#" class="resp_id" style="color:#00376B;">@letary</a>&nbsp;
-                                <span class="modal_comment" th:text="${comment.comment}">안녕하세요 나는 타이거입니다.</span>
+                                      <div th:data-no="${comment.no}" style="display: inline-block;">
+                                        <a class="modal_comment_id" th:href="@{/profile(username=${user.username})}" th:text="${comment.memberVO.username}">KingTiger</a>
+                                        <a href="#" class="resp_id" style="color:#00376B;">@letary</a>&nbsp;
+                                        <span class="modal_comment" th:text="${comment.comment}">안녕하세요 나는 타이거입니다.</span>
 
-                                <!-- 댓글 좋아요 -->
-                                <th:block th:if="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
-                                  <div class="comLike sprite_full_small_heart_icon_outline" th:data-no="${user.no}"></div>
-                                </th:block>
-                                <!-- 댓글 좋아요를 안 누른 경우 -->
-                                <th:block th:unless="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
-                                  <div class="comLike sprite_small_heart_icon_outline" th:data-no="${user.no}"></div>
-                                </th:block>
+                                        <!-- 댓글 좋아요 -->
+                                        <th:block th:if="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
+                                          <div class="comLike sprite_full_small_heart_icon_outline" th:data-no="${user.no}"></div>
+                                        </th:block>
+                                        <!-- 댓글 좋아요를 안 누른 경우 -->
+                                        <th:block th:unless="${#strings.equals(user.no,comment.comment_likeVO.user_no)}">
+                                          <div class="comLike sprite_small_heart_icon_outline" th:data-no="${user.no}"></div>
+                                        </th:block>
 
-                                <div class="commentInfo">
-                                  <span>1일</span>&nbsp;&nbsp;좋아요
-                                  <span id="md_comment_likeCount" th:text="${comment.modal_likeCount}">100개</span>개&nbsp;
-                                  <span class="resp_comment">답글달기</span>
+                                        <div class="commentInfo">
+                                          <span>1일</span>&nbsp;&nbsp;좋아요
+                                          <span id="md_comment_likeCount" th:text="${comment.modal_likeCount}">100개</span>개&nbsp;
+                                          <span class="resp_comment">답글달기</span>
+                                        </div>
+
+                                      </div>
+                                    </li>
+                                  </ul>
                                 </div>
-                              </div>
                             </div>
+
                           </th:block> <!-- comment : ${comments}-->
                         </div>
                         <div class="buttons">
